<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuInicio"
        android:enabled="true"
        android:icon="@drawable/ic_inicio"
        android:title="@string/txt_inicio"/>
    <item
        android:id="@+id/menuLugares"
        android:enabled="true"
        android:icon="@drawable/ic_mis_lugares"
        android:title="@string/txt_lugaress"/>

    <item
        android:id="@+id/menuFavoritos"
        android:enabled="true"
        android:icon="@drawable/ic_favoritos"
        android:title="@string/txt_favoritos"/>

    <item
        android:id="@+id/menuTopSemanal"
        android:enabled="true"
        android:icon="@drawable/ic_top_semanal"
        android:title="@string/txt_top_semanal"/>
</menu>