<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/txt_email"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="248dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contra_layout"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/txt_password"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="314dp" />


    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:inputType="text"
            android:gravity="center"
            android:id="@+id/btnRecuperarContra"
            android:layout_width="254dp"
            android:layout_height="45dp"
            android:ems="10"
            android:textColor="@color/black"
            android:backgroundTint="#DFDFDF"
            android:text="@string/txt_contrasena_olvidada"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="359dp" />



        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="@string/txt_login"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="431dp" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="150dp"
            android:layout_height="70dp"

            android:text="@string/txt_registro"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="431dp" />




    </LinearLayout>

