<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.crearlugar.FormularioCrearLugarFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nuevo_lugar"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paso_1"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:id="@+id/main"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.CrearLugarActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombreLayout"
                style="@style/lugar_form">

                <EditText
                    android:id="@+id/nombre_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_nombre_lugar"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/direccionLayout"
                style="@style/lugar_form">

                <EditText
                    android:id="@+id/direccion_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_direccion"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descripcionLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/descripcion_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_descripcion"
                    android:gravity="left"
                    android:minLines="5"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/categoria_lugar"
                style="@style/lugar_form"
                android:background="@drawable/spinner_border"/>

            <Spinner
                android:id="@+id/ciudad_lugar"
                style="@style/lugar_form"
                android:background="@drawable/spinner_border"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telefonoLayout"
                style="@style/lugar_form">

                <EditText
                    android:id="@+id/telefono_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_telefono"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/novedadesLayout"
                style="@style/lugar_form">

                <EditText
                    android:id="@+id/novedades_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_novedades"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>