<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_place"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetalleLugarActivity">

    <fragment
        android:id="@+id/simple_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        class="co.edu.eam.unilocal.fragments.SimpleHeaderFragment"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_nombre_lugar"
                style="@style/title_place"/>

            <TextView
                android:id="@+id/calificacionLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_calificacion_promedio_lugar"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/categoriaLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_categoriga_lugar"
                android:textColor="@color/black"
                android:textStyle="bold|italic"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/estadoHorarioLugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/txt_estado_horario_lugar"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/horarioLugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_horario_lugar"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnGuardarLugar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/txt_guardar_lugar"
                android:drawableLeft="@drawable/ic_save_place" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="155dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:src="@color/cardview_shadow_start_color" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="155dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="80dp"
            android:src="@color/cardview_shadow_start_color" />

    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>