<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/main"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CrearLugarActivity">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="<-"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_nuevo_lugar"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"

            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/nombre_lugar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_nombre_lugar"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/descripcion_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_descripcion"
                android:gravity="left"
                android:minLines="9"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/categoria_lugar"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"></Spinner>
        <Spinner
            android:id="@+id/ciudad_lugar"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"></Spinner>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/telefono_lugar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_telefono"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/novedades_lugar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_novedades"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_crear_lugar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/btn_crear_lugar"/>
    </LinearLayout>

</ScrollView>
