<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:padding="2dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imagen_lugar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/nombre_persona_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nombre_persona_comentario"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:padding="2dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/estrellas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:id="@+id/fecha_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/txt_fecha_comentario"/>

    </LinearLayout>

    <TextView
        android:id="@+id/comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/txt_comentario"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@drawable/fondo_forms"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray"/>

</LinearLayout>